policies/templates/eksControlSensitivePermissions.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: ekscontrolsensitivepermissions
spec:
  crd:
    spec:
      names:
        kind: EksControlSensitivePermissions
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package ekscontrolsensitivepermissions

        violation[{"msg": msg}] {
          rule := input.review.object.rules[_]
          verb := ["bind", "impersonate", "escalate"][_]
          verb_in_rule := rule.verbs[_] == verb
          verb_in_rule
          msg := sprintf("Role '%s' uses sensitive verb '%s'.", [input.review.object.metadata.name, verb])
        }
