policies/templates/eksEnforceSecretAccess.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: eksenforcesecretaccess
spec:
  crd:
    spec:
      names:
        kind: EksEnforceSecretAccess
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package eksenforcesecretaccess

        violation[{"msg": msg}] {
          resource := input.review.object.rules[_].resources[_]
          resource == "secrets"

          role_name := input.review.object.metadata.name
          not role_name_in_allowed_roles(role_name)

          msg := sprintf("Role '%s' grants access to secrets and is not in the allowed roles.", [role_name])
        }

        role_name_in_allowed_roles(role_name) {
          role_name == input.parameters.allowedRoles[_]
        }
