policies/templates/eksForbiddenSysCtlEffect.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: eksforbiddensysctleffect
spec:
  crd:
    spec:
      names:
        kind: EksForbiddenSysCtlEffect
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package eksforbiddensysctleffect

        violation[{"msg": msg}] {
          sysctl := input.review.object.spec.securityContext.sysctls[_]
          sysctl_in_forbidden_list(sysctl.name)
          msg := sprintf("Sysctl '%s' is forbidden.", [sysctl.name])
        }

        sysctl_in_forbidden_list(name) {
          name == input.parameters.forbiddenSysctls[_]
        }
