policies/templates/eksMountedSecrets.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: eksmountedsecrets
spec:
  crd:
    spec:
      names:
        kind: EksMountedSecrets
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package eksmountedsecrets

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          env_var := container.env[_]
          env_var.valueFrom.secretKeyRef
          msg := sprintf("Container '%s' in Pod '%s' must not use secrets as environment variables.", [container.name, input.review.object.metadata.name])
        }
