policies/templates/eksPSPHostFilesystem.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: ekspsphostfilesystem
spec:
  crd:
    spec:
      names:
        kind: EksPSPHostFilesystem
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package ekspsphostfilesystem

        violation[{"msg": msg}] {
          volume := input.review.object.spec.volumes[_]
          volume.hostPath
          msg := sprintf("Pod '%s' must not use hostPath volume '%s'.", [input.review.object.metadata.name, volume.name])
        }
