policies/templates/eksPrivEscalationcEffect.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: eksprivescalationeffect
spec:
  crd:
    spec:
      names:
        kind: EksPrivEscalationEffect
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package eksprivescalationeffect

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          container.securityContext.privileged == true
          msg := sprintf("Container '%s' in Pod '%s' must not run as privileged.", [container.name, input.review.object.metadata.name])
        }
