policies/templates/eksRestrictClusterAdmin.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: restrictclusteradminbinding
spec:
  crd:
    spec:
      names:
        kind: RestrictClusterAdminBinding
      validation:
        openAPIV3Schema:
          properties:
            excludedBindings:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package restrictclusteradminbinding

        violation[{"msg": msg}] {
          input.review.kind.kind == "RoleBinding" or input.review.kind.kind == "ClusterRoleBinding"

          binding := input.review.object
          resource_name := binding.metadata.name

          # Exclude specific bindings
          not is_excluded_binding(resource_name)

          binding.roleRef.kind == "ClusterRole"
          binding.roleRef.name == "cluster-admin"

          msg := sprintf("Binding '%s' should not use the cluster-admin role.", [resource_name])
        }

        is_excluded_binding(name) {
          excluded_bindings := input.parameters.excludedBindings
          some excluded
          excluded := excluded_bindings[_]
          name_matches_pattern(name, excluded)
        }

        name_matches_pattern(name, pattern) {
          contains(pattern, "*")
          regex_pattern := glob.match(pattern, [], name)
        } else {
          name == pattern
        }
