policies/templates/eksRestrictDefaultServiceAccount.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: eksrestrictdefaultserviceaccount
spec:
  crd:
    spec:
      names:
        kind: EksRestrictDefaultServiceAccount
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package eksrestrictdefaultserviceaccount

        violation[{"msg": msg}] {
          sa := input.review.object.spec.serviceAccountName
          sa == "default"
          msg := sprintf("Pod '%s' is using the default service account.", [input.review.object.metadata.name])
        }

        violation[{"msg": msg}] {
          not input.review.object.spec.serviceAccountName
          msg := sprintf("Pod '%s' does not specify a service account and will use the default.", [input.review.object.metadata.name])
        }
